--- a/gaminghub4.css
+++ b/gaminghub4.css
@@ -65,6 +65,17 @@ header > .container{
     display: none;
 
 }
+.hamburger-menu .fa-times.hide{
+    display: none;
+
+}
+.hamburger-menu .fa-bars.hide{
+    display: block;
+
+}
+
+
+
 .nav-list{
     position: fixed;
     z-index: 1;
