--- a/gstyles.css
+++ b/gstyles.css
@@ -1,94 +1,92 @@
 body{
-    margin: 0;
-    padding: 0;
-    display: flex;
-   justify-content: center;
-   align-items: center;
-   min-height: 100vh;
-   font-family: fantasy;
-   background: linear-gradient(to bottom, #0f0c29,#302b);,#24243e
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	font-family: 'Jost', sans-serif;
+	background: linear-gradient(rgba(14, 1, 49, 0.747),rgba(16, 29, 44, 0.767) ),
+    url("https://images.unsplash.com/photo-1560253023-3ec5d502959f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80") ;
 }
 .main{
-    width: 350px;
-    height: 500px;
-    background: red;
-    overflow: hidden  ;
-    background-image: none;
-    border-radius: 10px;
-    box-shadow: 5px 20px 50px,black;
+	width: 350px;
+	height: 550px;
+	background: red;
+	overflow: hidden;
+	background: linear-gradient(rgba(1, 4, 48, 0.897),rgba(16, 29, 44, 0.952) ),
+    url("https://images.unsplash.com/photo-1542751371-adc38448a05e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60") ;
+	border-radius: 10px;
+	box-shadow: 5px 20px 50px #000;
 }
 #chk{
-    display: none;
-
+	display: none;
 }
 .signup{
-    position: relative;
-    width: 100%;
-    height: 100%;
+	position: relative;
+	width:100%;
+	height: 100%;
 }
 label{
-    color: white;
-    font-size: 2.3rem;
-    justify-content: center;
-    display: flex;
-    margin: 60px;
-font-weight: bold;
-cursor: pointer;
-transition: .5s ease-in-out;
+	color: #fff;
+	font-size: 2.3em;
+	justify-content: center;
+	display: flex;
+	margin: 60px;
+	font-weight: bold;
+	cursor: pointer;
+	transition: .5s ease-in-out;
 }
 input{
-    width: 60%;
-    height: 20px;
-    background: #e0dede;
-    justify-content: center;
-    margin: 20px auto;
-    padding: 10px;
-    display: flex;
-    border: none;
-    border-radius: 5px;
+	width: 60%;
+	height: 20px;
+	background: #e0dede;
+	justify-content: center;
+	display: flex;
+	margin: 20px auto;
+	padding: 10px;
+	border: none;
+	outline: none;
+	border-radius: 5px;
 }
 button{
-    width: 60%;
-    height: 40px;
-    margin: 10px auto;
-    justify-content: center;
-    display: block;
-    color: #ffffff;
-    background: #573b8a;
-    font-size: 1em;
-    font-weight: bold;
-    margin-top: 20px;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    transition: .2s ease-in;
-    cursor: pointer;
+	width: 60%;
+	height: 40px;
+	margin: 10px auto;
+	justify-content: center;
+	display: block;
+	color: #fff;
+	background: #573b8a;
+	font-size: 1em;
+	font-weight: bold;
+	margin-top: 20px;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	transition: .2s ease-in;
+	cursor: pointer;
 }
 button:hover{
-    background: #6d44b8;
-
+	background: #4206af;
 }
-
 .login{
-    height: 460px;
-    background: #eee;
-    border-radius:60%/10%;
-    transform: translateY(-180px);
+	height: 480px;
+	background: linear-gradient(rgba(255, 255, 255, 0.952),rgba(66, 5, 107, 0.952) );
+	transform: translateY(-180px);
     transition: .8s ease-in-out;
+    border-radius: 14px;
 }
-.login label
-{
-    color: #573b8a;
-    transform: scale(.6);
+.login label{
+	color: #30077a;
+	transform: scale(.6);
 }
-#chk:checked ~ .login{
-    transform: translateY(-500px);
 
+#chk:checked ~ .login{
+	transform: translateY(-500px);
 }
 #chk:checked ~ .login label{
-    transform: scale(1);
-
+	transform: scale(1);	
 }
 #chk:checked ~ .signup label{
-    transform: scale(.6);
+	transform: scale(.6);
 }
